Bug 502533 - Titles of QtQuick and QtWidgets KCMs aren't 100% identical in positioning
Summary: Titles of QtQuick and QtWidgets KCMs aren't 100% identical in positioning
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.4
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-04-07 19:34 UTC by John Veness
Modified: 2025-04-19 08:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.14
Sentry Crash Report:


Attachments
Fonts screenshot (112.98 KB, image/png)
2025-04-07 19:34 UTC, John Veness
Details
Font Management screenshot (169.94 KB, image/png)
2025-04-07 19:35 UTC, John Veness
Details
Comparison of titles of Fonts, Font Management and Window Behavior (219.82 KB, image/png)
2025-04-07 21:49 UTC, TraceyC
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2025-04-07 19:34:17 UTC
SUMMARY
The vertical placement of the titles for the "Fonts" and "Font Management" KCMs are slightly different.

STEPS TO REPRODUCE
1. Open System Settings
2. Navigate to Text & Fonts
3. Look carefully at the title "Fonts"
4. Click on "Font Management" while still looking at the title "Fonts"

OBSERVED RESULT
The title for "Font Management" is a pixel or two higher than the title for "Fonts".

EXPECTED RESULT
The title for "Font Management" is at the same vertical placement as the title for "Fonts".

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250403
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.14.0-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
I filed this in general rather than in kcm_fontinst or kcm_fonts as I don't know which one is wrong!
Comment 1 John Veness 2025-04-07 19:34:43 UTC
Created attachment 180075 [details]
Fonts screenshot
Comment 2 John Veness 2025-04-07 19:35:08 UTC
Created attachment 180076 [details]
Font Management screenshot
Comment 3 TraceyC 2025-04-07 21:47:15 UTC
You have a good eye! I compared both of those kcms with Window Behavior and found that it's "Font" that is lower than this or Font Management. I'm attaching a comparison I created of the title areas side by side with a guideline to show the difference.
Comment 4 TraceyC 2025-04-07 21:49:11 UTC
Created attachment 180081 [details]
Comparison of titles of Fonts, Font Management and Window Behavior

Confirmed the discrepancy on git-master
I don't know if any other kcms are affected
Comment 5 Nate Graham 2025-04-08 14:49:04 UTC
It's an artifact of the difference between QtQuick and QtWidgets KCMs. Font Management is QtWidgets; the others are QtQuick.

We've done a *lot* of tweaking here, but keeping them permanently synced is challenging for technical reasons.
Comment 6 Bug Janitor Service 2025-04-14 01:46:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kwidgetsaddons/-/merge_requests/307
Comment 7 Ismael Asensio 2025-04-14 17:28:55 UTC
Git commit 8833754cfba09ccf38cfce2ff28b95bce2510967 by Ismael Asensio.
Committed on 14/04/2025 at 01:23.
Pushed by iasensio into branch 'master'.

KTitleWidget: Compensate extra pixel between layouts

The widget's internal `QGridLayout` is contained within a `QVBoxLayout`
to allow proper arrangement. This, however adds an extra pixel at the
bottom, which pushes up the vertically centered label.

Add this 1px to the top margin to compensate the vertical alignment
FIXED-IN: 6.14

M  +2    -1    src/ktitlewidget.cpp

https://invent.kde.org/frameworks/kwidgetsaddons/-/commit/8833754cfba09ccf38cfce2ff28b95bce2510967