KTitleWidget: Compensate extra pixel between layouts

The widget's internal `QGridLayout` is contained within a `QVBoxLayout`
to allow proper arrangement. This, however adds an extra pixel at the
bottom, which pushes up the vertically centered label.

Add this 1px to the top margin to compensate the vertical alignment

BUG: 502533
FIXED-IN: 6.14